# dotfile

./: .Xresources  .alacritty.toml  .alacritty.yml  .bash_profile  .bashrc  .condarc  .config.fish  .config.ghostty  .config.ghostty.noise.glsl  .fbtermrc  .gitconfig  .gitignore  .gitmessage  .gitmodules  .gitui.key_bindings.ron  .gvimrc  .helix.config.toml  .mpv.conf  .mpv.input.conf  .mpv_thumbnail_script.conf  .mpv_thumbnail_script_client_osc.lua  .mpv_thumbnail_script_server.lua  .myclirc  .nanorc  .npmrc  .pip.ini  .pythonrc  .swp  .tigrc  .tmux.conf  .vimrc  .vscode.keybindings.js  .vscode.monokai-neon-glow.css  .vscode.settings.js  .wezterm.lua  .yarnrc  .zed.keymap.js  .zed.settings.js  .zshrc  Brackets Extensions.md  (+19 more)
Android/: Android.md  Asus.md  CrossCompile.md  DimenAutoGen.java  Flutter.md  Opkg.md  ReactNative.md  Rooted.md  Termux.md  pidcat.py
BSD/: FreeBSD.md  Inziu-Iosevka-TC-Regular-37.fnt  fluxbox-keys.sh  ps4.md
Hardware/: Android.md  Hardware.md  Helmet.md  Keyboard.md
Linux/: .config_openbox_rc.xml  Alpine.md  ArchLinux.md  Arkade.md  BaiduCloud.desktop  Compton.desktop  Deepin.md  Fbterm.md  Flatpak.md  FydeOS.md  Lync.md  Manjaro.md  NoX.md  Printer.md  Snap.md  Ubuntu Daily Devel.sh  Ubuntu-lxqt.md  VNC.md  Windows.desktop  Winehq.md  Xfce.md  Yocto.md  apt-fast  cjk.reg  compton.conf  debian.md  fcitx_sogou.sh  gvim.desktop  homebrew.md  joeky.dict.yaml  (+11 more)
Programming/rust-playground/: Cargo.toml
Programming/rust-playground/src/: main.rs
Programming/rust-playground/src/environment/: mod.rs
Programming/rust-playground/src/logger/: mod.rs
(+349 files in other folders)
