[package]
name = "rust-playground"
version = "0.1.0"
authors = ["Joeky <joeky5888@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = 1 # Enable backtrace
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
backtrace = "0.3"
log = "0.4"
env_logger = "0.9"
chrono = "0.4"
config = { git = "https://github.com/mehcode/config-rs", rev = "53e43fb" }
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
